--- a/cluster-2/tracks-api-rt-2.yaml
+++ b/cluster-2/tracks-api-rt-2.yaml
@@ -8,7 +8,7 @@ metadata:
     api: tracks
 spec:
   hosts:
-    - "*"
+    - "api.tracks-2.com"
   portalMetadata:
     title: Catstronauts REST API V2
     description: REST API for Catstronauts to retrieve data for tracks, authors and modules.
@@ -27,7 +27,6 @@ spec:
           - ref:
               name: tracks-rest-api
               namespace: tracks
-              cluster: cluster-2
             port:
               number: 5000
   virtualGateways:
